--- a/Models/SpeechLM/ST2S/2024.06.12_VALL-E_R.md
+++ b/Models/SpeechLM/ST2S/2024.06.12_VALL-E_R.md
@@ -49,11 +49,11 @@ Audio samples will be available at: [this https URL](https://aka.ms/valler).
 
 <table><tr><td width="50%">
 
-In recent years, Large Language Models (LLMs) have achieved impressive performance in various fields including natural language processing (NLP) tasks~\citep{achiam2023gpt,touvron2023llama} and computer vision (CV) tasks~\citep{ramesh2021zero, radford2021learning}.
-In audio domain, with the emergence of neural audio codecs~\citep{zeghidour2021soundstream, defossez2022high}, they can tokenize audio with high fidelity, making language modeling of audio modalities feasible~\citep{borsos2023audiolm}.
-For zero-shot text-to-speech (TTS) task, traditional methods often rely on speaker adaptation~\citep{chen2018sample,moss2020boffin} or speaker encoding~\citep{arik2018neural,cooper2020zero}, requiring additional fine-tuning, complex pre-designed features, or heavy structure engineering.
+In recent years, Large Language Models (LLMs) have achieved impressive performance in various fields including natural language processing (NLP) tasks[^01], [^02] and computer vision (CV) tasks[^03], [^04].
+In audio domain, with the emergence of neural audio codecs[^05], [^06], they can tokenize audio with high fidelity, making language modeling of audio modalities feasible[^07].
+For zero-shot text-to-speech (TTS) task, traditional methods often rely on speaker adaptation[^08], [^09] or speaker encoding[^10], [^11], requiring additional fine-tuning, complex pre-designed features, or heavy structure engineering.
 And there is always a significant performance decline when facing unseen speakers.
-Leveraging the \textit{in-context learning} capabilities of LLM~\citep{brown2020language}, several works~\citep{wang2023neural, kharitonov2023speak, jiang2023mega, kim2023clam, hao2023boosting} attempt to apply LLM to model discrete audio tokens from neural codecs, and have shown amazing performance in zero-shot TTS, which can clone a timbre and prosody with just a few seconds of audio prompt.
+Leveraging the in-context learning capabilities of LLM[^12], several works (**VALL-E**[^13], **SPEAR-TTS**[^14], [^15], [^16], [^17]) attempt to apply LLM to model discrete audio tokens from neural codecs, and have shown amazing performance in zero-shot TTS, which can clone a timbre and prosody with just a few seconds of audio prompt.
 
 </td><td>
 
@@ -61,16 +61,16 @@ Leveraging the \textit{in-context learning} capabilities of LLM~\citep{brown2020
 <tr><td>
 
 Although the TTS model based on LLM has achieved impressive results in maintaining naturalness and timbre, it still suffers from issues including robustness and efficiency when applied: (1) TTS task is a monotonic sequence to sequence task, but the decoder-only transformer structure in LLM only captures the monotonic association between phoneme sequences and audio through self-attention mechanism, which can easily lead to potential attention degradation problems when facing complex or long sequences, resulting in inaccurate generation results.
-(2) Neural codecs have a high sampling rate (75Hz in Encodec~\citep{defossez2022high}), and autoregressive can better model temporal information, bringing better results while also incurring significant computational costs in the inference stage.
-Recently, there have been some attempts to introduce phoneme information or transducer~\citep{graves2012sequence, gong2024advanced} to help solve robustness problems, but this has also brought about issues such as high inference consumption~\citep{song2024ella} and slow training speed~\citep{du2024vall}.
-Some other works attempt to improve efficiency by changing the pattern of token organization, but the effect is not very obvious~\citep{borsos2023audiolm, wang2023neural, copet2024simple,yu2024megabyte}.
+(2) Neural codecs have a high sampling rate (75Hz in Encodec[^06]), and autoregressive can better model temporal information, bringing better results while also incurring significant computational costs in the inference stage.
+Recently, there have been some attempts to introduce phoneme information or transducer[^18], [^19] to help solve robustness problems, but this has also brought about issues such as high inference consumption[^20] and slow training speed[^21].
+Some other works attempt to improve efficiency by changing the pattern of token organization, but the effect is not very obvious[^07], [^13], [^22], [^23].
 
 </td><td>
 
 </td></tr>
 <tr><td>
 
-In this paper, we introduce ***VALL-E R***, a robust and efficient neural codec language model for zero-shot TTS, aiming to alleviate the issues of robustness and inference efficiency encountered by its predecessor VALL-E \citep{wang2023neural}.
+In this paper, we introduce ***VALL-E R***, a robust and efficient neural codec language model for zero-shot TTS, aiming to alleviate the issues of robustness and inference efficiency encountered by its predecessor **VALL-E**[^13].
 As shown in Figure~\ref{fig:overview}, ***VALL-E R*** incorporates phoneme prediction into acoustic token prediction during the training process and utilize monotonic alignment strategy to guide the inference, with almost no computational burden introduced throughout the entire process.
 Moreover, ***VALL-E R*** employs a novel codec-merging method that enables the use of condensed codec codes within its autoregressive model, greatly improving the inference speed via reducing the number of autoregressive steps in the inference stage.
 In summary, our proposed ***VALL-E R*** provides the following key contributions:
@@ -103,18 +103,18 @@ Should there be any concerns about ***VALL-E R*** being utilized inappropriately
 
 <table><tr><td width="50%">
 
-Recently, language models have increasingly garnered attention within both the academic and industrial sectors, demonstrating their formidable capabilities in feature modeling and problem-solving across domains such as text~\citep{touvron2023llama}, images~\citep{ding2021cogview}, and videos~\citep{kondratyuk2023videopoet}.
+Recently, language models have increasingly garnered attention within both the academic and industrial sectors, demonstrating their formidable capabilities in feature modeling and problem-solving across domains such as text[^02], images[^24], and videos[^25].
 In the audio domain,
-AudioLM~\citep{borsos2023audiolm} has been trained on discrete audio tokens, accomplishing audio synthesis tasks through hierarchical prediction of these tokens, and text conditional control can also be achieved through models such as CLAP~\citep{zhao2023clap}.
-For zero-shot TTS, VALL-E~\citep{wang2023neural} pioneered the integration of discrete codecs and approached TTS as a conditional language modeling task, enabling voice generation in unseen speakers from a mere short speech sample, thereby underscoring the powerful representational capacity of language models in TTS.
+AudioLM[^07] has been trained on discrete audio tokens, accomplishing audio synthesis tasks through hierarchical prediction of these tokens, and text conditional control can also be achieved through models such as CLAP[^26].
+For zero-shot TTS, **VALL-E**[^13] pioneered the integration of discrete codecs and approached TTS as a conditional language modeling task, enabling voice generation in unseen speakers from a mere short speech sample, thereby underscoring the powerful representational capacity of language models in TTS.
 Following it, numerous improvements have been made.
-VALL-E X~\citep{zhang2023speak} expanded upon multilingual capabilities, supporting a broader range of tasks.
-VioLA \citep{wang2023viola} further integrated various cross-modal tasks involving speech and text into a single codec-based Transformer decoder-only model.
-In terms of robustness, EALL-V~\citep{song2024ella} enhanced robustness by implicitly establishing a connection between text and audio during the synthesis process through text insertion.
-VALL-T~\citep{du2024vall} improved robustness by combining with a Transducer and introducing text control by adjusting relative position encoding.
-Meanwhile, CLaM-TTS~\citep{kim2023clam} leveraged a pre-trained language model and probabilistic discrete learning to enhance the expressiveness of synthesized speech, marking significant advancements in the field.
+VALL-E X[^27] expanded upon multilingual capabilities, supporting a broader range of tasks.
+VioLA [^28] further integrated various cross-modal tasks involving speech and text into a single codec-based Transformer decoder-only model.
+In terms of robustness, EALL-V[^20] enhanced robustness by implicitly establishing a connection between text and audio during the synthesis process through text insertion.
+VALL-T[^21] improved robustness by combining with a Transducer and introducing text control by adjusting relative position encoding.
+Meanwhile, CLaM-TTS[^16] leveraged a pre-trained language model and probabilistic discrete learning to enhance the expressiveness of synthesized speech, marking significant advancements in the field.
 
-Concurrently with our work, RALL-E \citep{xin2024rall} attempts to enhance  the robustness of VALL-E through the adoption of chain-of-thought (CoT) prompting techniques.
+Concurrently with our work, RALL-E [^29] attempts to enhance  the robustness of VALL-E through the adoption of chain-of-thought (CoT) prompting techniques.
 Although the above works have effectively improved the performance of decoder-only transformer based text-to-speech system, no one has yet attempted to improve the efficiency of autoregression, which is currently a pain point.
 
 </td><td>
@@ -126,13 +126,13 @@ Although the above works have effectively improved the performance of decoder-on
 <table><tr><td width="50%">
 
 In autoregressive acoustic modeling, issues such as word skipping, repetition, and attention collapse often occur due to inaccuracies in the attention alignments learned within the encoder-decoder framework.
-To alleviate this problem, considering some properties of the alignments between text and waveform sequence, applying monotonic mechanism to enhance attention has demonstrated to be particularly effective to strictly preserve monotonicity and locality~\citep{he2019robust}.
-Considering the alignments between text and speech are depending on their positions, numerous TTS models have incorporated location-based attention mechanisms to exploit the positional information for more accurate alignment~\citep{sotelo2017char2wav, vasquez2019melnet, battenberg2020location}.
-For monotonic attention, it leverages the prior that the alignments between text and speech are monotonic~\citep{he2019robust, raffel2017online}.
+To alleviate this problem, considering some properties of the alignments between text and waveform sequence, applying monotonic mechanism to enhance attention has demonstrated to be particularly effective to strictly preserve monotonicity and locality[^30].
+Considering the alignments between text and speech are depending on their positions, numerous TTS models have incorporated location-based attention mechanisms to exploit the positional information for more accurate alignment[^31], [^32], [^33].
+For monotonic attention, it leverages the prior that the alignments between text and speech are monotonic[^30], [^34].
 In each decoding step, the attention alignment position moves forward at most one step, so there is no situation where any input unit is skipped or repeated.
 While such methods have enhanced stability by introducing linear alignment, the constraints of hard attention significantly hinders the encapsulation of global contextual information, where the model only focuses on one token at a time.
-Therefore, models in~\citep{tachibana2018efficiently, chiu2017monotonic} restrict the attention on the source sequence into a sliding window, replacing hard attention.
-Furthermore, Chen et al.~\citep{chen2020multispeech} introduce an innovative approach to penalize off-diagonal attention weights by constructing a band mask that promotes the concentration of attention weights within a diagonal band, thus enhancing alignment fidelity while maintaining contextual awareness.
+Therefore, models in[^35], [^36] restrict the attention on the source sequence into a sliding window, replacing hard attention.
+Furthermore, Chen et al.[^37] introduce an innovative approach to penalize off-diagonal attention weights by constructing a band mask that promotes the concentration of attention weights within a diagonal band, thus enhancing alignment fidelity while maintaining contextual awareness.
 Although these methods have effectively improved the robustness of autoregressive TTS systems, they are all based on the encoder-decoder architecture and are not compatible with the current popular decoder-only architecture.
 
 </td><td>
@@ -156,7 +156,7 @@ We first introduce the codec-merging approach in Section.\ref{sec:merge_codec} w
 <table><tr><td width="50%">
 
 
-Building upon the foundational work of Encodec~\citep{defossez2022high}, we introduce the concept of a merged codec.
+Building upon the foundational work of Encodec[^06], we introduce the concept of a merged codec.
 This innovative approach enables the downsampling of discrete codes across various layers through alterations in the inference forward process.
 Remarkably, this is achieved without necessitating any retraining or fine-tuning of the model, presenting a significant advancement in the efficient manipulation of audio data representations.
 
@@ -195,7 +195,7 @@ The overview is illustrated in Figure.~\ref{fig:model} and details of training a
 
 #### Training with Phoneme Prediction
 
-To achieve a good trade-off between speech quality and inference speed, our ***VALL-E R*** includes two models: autoregressive (AR) and non-autoregressive (NAR), which is following VALL-E~\citep{wang2023neural}.
+To achieve a good trade-off between speech quality and inference speed, our ***VALL-E R*** includes two models: autoregressive (AR) and non-autoregressive (NAR), which is following **VALL-E**[^13].
 Specifically, given a training data pair $\{\mathbf{s}, \mathbf{p}\}$, where $\mathbf{s}$ is speech sample, and $\mathbf{p}=\{p_1, p_2, \dots, p_L\}$ is its corresponding phoneme transcription.
 Then, the codec-merging model introduced in Section.~\ref{sec:merge_codec} is utilized to compress speech waveform $\mathbf{s}$ into discrete acoustic tokens $\mathbf{A}$ with 8 quantizers, formulated as: $\mathrm{MergeCodec}(\mathbf{x})=\mathbf{A}^{8\times T}=\{\mathbf{a}^1, \dots, \mathbf{a}^8\}$, where $T$ is length of discrete codes and $\mathbf{a}^i=\{a_1, \dots, a_T\}$ represent the tokens in the $i$-th layer.
 Because the training of ***VALL-E R*** requires the aligned phonemes and acoustic tokens, aligner tool is adopted here to align $\mathbf{p}$ with acoustic tokens $\mathbf{A}$, denoted as $\hat{\mathbf{p}}_{1:T}=\{\hat{p_1}, \hat{p_2}, \dots, \hat{p_L}\}$ where $\hat{p_i}$ contains $N_i$ repetitions of  $p_i$ and $\sum_{i=1}^{L}N_i=T$.
@@ -222,7 +222,7 @@ We also share the parameters of the acoustic embedding layer and the output pred
 #### Inference with Monotonic Alignment
 
 After training with teacher forcing, the neural codec LM we obtained is surprising in context learning ability.
-With just a 3 seconds acoustic prompt, we can replicate the timbre and prosody of unseen speakers without any fine-tuning or adaptation methods~\citep{wang2023neural}.
+With just a 3 seconds acoustic prompt, we can replicate the timbre and prosody of unseen speakers without any fine-tuning or adaptation methods (**VALL-E**[^13]).
 Take Figure.~\ref{fig:model} as an example of autoregressive inference, we convert the text input into phonemes sequence $\mathbf{p}^t=\{p_1^t, \dots, p_3^t\}$ and concatenate it with transcription phoneme of acoustic prompt $\mathbf{p}^p=\{p_1^p, p_2^p\}$ to form phoneme tokens for model.
 In the following, we will use acoustic tokens $\mathbf{a}=\{a_1^p, \dots, a_n^t\}$ and corresponding aligned phoneme tokens $\mathbf{p}^a=\{p_1^p, \dots, p_n^t\}$ as condition to predict the audio and phoneme of next step autoregressively.
 
@@ -239,7 +239,7 @@ To increase the diversity of synthesis process, sampling based decoding is used 
 And for NAR model, we adopt greedy search method to generate the $(j+1)$-th layer acoustic tokens based on the self-aligned phoneme sequence and previous few layers of generated acoustic tokens.
 
 Finally, decoder of neural codec is adopted here to convert generated discrete codes into waveform.
-In summary, our inference process has the following three characteristics~\citep{tan2021survey} by using MA strategy:
+In summary, our inference process has the following three characteristics[^38] by using MA strategy:
 
 - Locality: Each phoneme token can correspond to one or several consecutive acoustic tokens, ensuring a flexible and accurate mapping.
 Conversely, each acoustic token is uniquely aligned to a single phoneme token.
@@ -264,21 +264,16 @@ It can also be regarded as a voice conversion task, whose goal is to make the ti
 
 </td></tr></table>
 
-#### Training with Phoneme Prediction
-
-
-
-
 ## 4·Experiments: 实验
 
 <table><tr><td width="50%">
 
 ### Dataset
 
-We use LibriSpeech~\citep{panayotov2015librispeech} dataset in our experiments, which contains 960 hours of multi-speaker transcribed English speech data.
-Because VALL-R requires phoneme alignment information during training and inference processing, Montreal Forced Aligner (MFA)~\citep{mcauliffe2017montreal} is utilized to align transcript and audio.
-For the neural codecs, we use Encodec~\citep{defossez2022high}, which applies Residual Vector Quantization (RVQ) to compress 24khz waveform into 8-layers discrete codes at 75hz.
-To synthesize higher quality audio, we adopt Vocos~\citep{siuzdak2023vocos} as vocoder which is aligned with Encodec.
+We use LibriSpeech[^39] dataset in our experiments, which contains 960 hours of multi-speaker transcribed English speech data.
+Because VALL-R requires phoneme alignment information during training and inference processing, Montreal Forced Aligner (MFA)[^40] is utilized to align transcript and audio.
+For the neural codecs, we use Encodec[^06], which applies Residual Vector Quantization (RVQ) to compress 24khz waveform into 8-layers discrete codes at 75hz.
+To synthesize higher quality audio, we adopt Vocos[^41] as vocoder which is aligned with Encodec.
 
 </td><td>
 
@@ -290,9 +285,9 @@ To synthesize higher quality audio, we adopt Vocos~\citep{siuzdak2023vocos} as v
 **Objective Metrics**
 
 We evaluated robustness, speaker similarity, sound quality and efficiency with several objective metrics.
-For robustness and intelligibility, we measure them by computing the word error rate (WER) of the synthesized transcription from generated speech concerning the input text, with Conformer-Transducer ASR model\footnote{https://huggingface.co/nvidia/stt\_en\_conformer\_transducer\_xlarge}~\citep{gulati2020conformer}.
+For robustness and intelligibility, we measure them by computing the word error rate (WER) of the synthesized transcription from generated speech concerning the input text, with [Conformer-Transducer ASR model [URL]](https://huggingface.co/nvidia/stt_en_conformer_transducer_xlarge)[^42].
 
-For speaker similarity, we employ WavLM-TDNN model\footnote{https://huggingface.co/microsoft/wavlm-base-plus-sv} \citep{chen2022wavlm, chen2022large} which extract the speaker vector representing the voice attribute of the speakers.
+For speaker similarity, we employ [**WavLM-TDNN** model [URL]](https://huggingface.co/microsoft/wavlm-base-plus-sv) [^43], [^44] which extract the speaker vector representing the voice attribute of the speakers.
 We measure the speaker similarity by computing the cosine similarity between the generated and the prompt speeches, which is denoted as Spk-Sim.
 
 To evaluate the sound quality of the reconstruction audio, we adopt the metrics from speech enhancement fields, such as the Perceptual Evaluation of Speech Quality (PESQ) and Short-Time Objective Intelligibility (STOI) to evaluate the performance.
@@ -313,11 +308,11 @@ We measure the quality of the generated speech from human evaluations via three 
 ### Baseline
 
 To demonstrate the robustness and inference efficiency of our system, we selected multiple classic baseline systems for comparison.
-For robustness, besides its predecessor VALL-E~\citep{wang2023neural}, we mainly compare two recent works which are proposed to improve robustness.
+For robustness, besides its predecessor **VALL-E**[^13], we mainly compare two recent works which are proposed to improve robustness.
 One is VALL-T, it adopts transducer to enhance text controllability via adjusting relative position encoding.
-And another one is ELLA-V~\citep{song2024ella}, which interleaves sequences of acoustic and phoneme tokens to achieve the fine-grained control at the phoneme level.
+And another one is ELLA-V[^20], which interleaves sequences of acoustic and phoneme tokens to achieve the fine-grained control at the phoneme level.
 To ensure fair comparison, all the systems including ***VALL-E R*** and baselines, are trained with the same dataset (LibriSpeech) and architecture (stacked 12-layers Transformer).
-As for efficiency, since the inference time of neural codec LM based TTS system mainly depends on the number of autoregressive steps, we selected representative methods including AudioLM~\citep{borsos2023audiolm}, VALL-E~\citep{wang2023neural}, ELLA-V~\citep{song2024ella}, RALL-E~\citep{xin2024rall}, MusicGen~\citep{copet2024simple}, and compared the impact of different token arrangement methods on efficiency.
+As for efficiency, since the inference time of neural codec LM based TTS system mainly depends on the number of autoregressive steps, we selected representative methods including AudioLM[^07], **VALL-E**[^13], ELLA-V[^20], RALL-E[^29], MusicGen[^22], and compared the impact of different token arrangement methods on efficiency.
 
 </td><td>
 
@@ -344,9 +339,9 @@ Subsequently, the learning rate undergoes a linear decay coupled with a weight d
 
 <table><tr><td width="50%">
 
-We measure the performances of the proposed ***VALL-E R*** under two different tasks following the configuration used in~\citep{wang2023neural, kim2023clam} on LibriSpeech test-clean ranging from 4 to 10 seconds:
-1) \textit{Continuation}: we use the first 3 seconds of the utterance and the corresponding text transcription as prompt respectively, and ask model to synthesize the subsequent portion of the speech seamlessly.
-2) \textit{Cross-sentence}: Given the target text, a 3-second prompted speech, and its corresponding transcript, which contains a different sentence from the target text, the task is to synthesize the speech with target text following the style of the provided speech prompt.
+We measure the performances of the proposed ***VALL-E R*** under two different tasks following the configuration used in **VALL-E**[^13], [^16] on LibriSpeech test-clean ranging from 4 to 10 seconds:
+1) Continuation: we use the first 3 seconds of the utterance and the corresponding text transcription as prompt respectively, and ask model to synthesize the subsequent portion of the speech seamlessly.
+2) Cross-sentence: Given the target text, a 3-second prompted speech, and its corresponding transcript, which contains a different sentence from the target text, the task is to synthesize the speech with target text following the style of the provided speech prompt.
 
 </td><td>
 
@@ -355,7 +350,7 @@ We measure the performances of the proposed ***VALL-E R*** under two different t
 
 **Objective Evaluation**
 
-We list the objective evaluation results of \textit{continuation} and \textit{cross-sentence} in Table~\ref{tab:results_overview}.
+We list the objective evaluation results of continuation and cross-sentence in Table~\ref{tab:results_overview}.
 
 Under the continuation configuration, although ELLA-V achieves a certain improvement over the VALL-E via connecting phoneme tokens with their corresponding acoustic tokens, our proposed ***VALL-E R*** employs a monotonic alignment strategy for more precise control and approaches the performance of Encodec in terms of Word Error Rate (WER), which can be considered as upper bound.
 
@@ -389,7 +384,7 @@ Overall, ***VALL-E R***’s generated speech exceed the baseline in naturalness,
 Benefiting from the explicit modeling of phonetic sequences, ***VALL-E R*** is capable of precisely controlling the duration of each phoneme's articulation, thereby achieving timbre conversion while preserving prosody.
 In this experiment, we randomly selected an audio sample from the LibriSpeech test set to serve as acoustic prompt, providing the reference timbre.
 Another audio sample was randomly chosen, with its phonetic transcription serving as both the textual prompt and prosody reference.
-We conducted a comparison among multiple baseline systems, calculating the Mel Cepstral Distortion with Dynamic Time Warping and weighted Speech Length (MCD-DTW-SL)~\citep{chen2022v2c} between the generated audio and the target audio to evaluate the similarity in speech length and alignment quality as a measure of prosody.
+We conducted a comparison among multiple baseline systems, calculating the Mel Cepstral Distortion with Dynamic Time Warping and weighted Speech Length (MCD-DTW-SL)[^45] between the generated audio and the target audio to evaluate the similarity in speech length and alignment quality as a measure of prosody.
 Results are presented in Table~\ref{tab:mcd}, neither VALL-E nor ELLA-V is capable of precise duration control, thus limiting their speech generation capabilities to the prosody of the given acoustic prompt.
 For ***VALL-E R***-Prosody, we can employ the aligned phoneme sequence from the target prosody audio as input for the neural codec language model.
 This enables the preservation of target prosody while cloning the timbre from the acoustic prompt.
@@ -409,7 +404,7 @@ The first row is the flatten pattern in AudioLM, which generates all 8 layers of
 VALL-E adopts a coarse-to-fine pattern, generating the first layer autoregressively, then employing non-autoregressive module for the codec of subsequent 7 layers, significantly reducing inference time.
 ELLA-V, building upon VALL-E, introduces a large number of phoneme tokens (around 2*105 in 10s speech) into the autoregressive process.
 While this enhances robustness, it considerably slows down inference efficiency.
-Similarly, RALL-E introduces control information for duration and pitch in autoregression through \textit{Chain-of-Thought} prompting, which also increases inference time.
+Similarly, RALL-E introduces control information for duration and pitch in autoregression through Chain-of-Thought prompting, which also increases inference time.
 MusicGen, on the other hand, is based on a delay pattern.
 Despite discarding the non-autoregressive module, its speed does not show a significant improvement over VALL-E.
 
@@ -469,7 +464,7 @@ This suggests that without explicit indications, the model becomes confused abou
 In contrast, for our proposed ***VALL-E R***, depicted in Figure (b), there is no distinct bright line, and the attention is evenly distributed.
 This demonstrates that ***VALL-E R*** introduces explicit phoneme indications, allowing the model to focus on the global information of the text without worrying about the progress of reading.
 Finally, in Figure (c), we provide the alignment path of phonemes in ***VALL-E R*** during the inference process.
-An uninterrupted and monotonous diagonal can be observed, which indicates that all phonemes are covered by the generated speech one by one, satisfying the characteristics of \textit{locality}, \textit{monotonicity}, and \textit{completeness} defined in Section.~\ref{sec:inference}.
+An uninterrupted and monotonous diagonal can be observed, which indicates that all phonemes are covered by the generated speech one by one, satisfying the characteristics of locality, monotonicity, and completeness defined in Section.~\ref{sec:inference}.
 
 </td><td>
 
@@ -500,3 +495,49 @@ Experimental results demonstrate that ***VALL-E R*** can effectively model the c
 </td><td>
 
 </td></tr></table>
+
+[^01]: achiam2023gpt
+[^02]: touvron2023llama
+[^03]: ramesh2021zero
+[^04]: radford2021learning
+[^05]: zeghidour2021soundstream
+[^06]: defossez2022high
+[^07]: borsos2023audiolm
+[^08]: chen2018sample
+[^09]: moss2020boffin
+[^10]: arik2018neural
+[^11]: cooper2020zero
+[^12]: brown2020language
+[^13]: [VALL-E](2023.01.05_VALL-E.md)
+[^14]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md)
+[^15]: jiang2023mega
+[^16]: kim2023clam
+[^17]: hao2023boosting
+[^18]: graves2012sequence
+[^19]: gong2024advanced
+[^20]: song2024ella
+[^21]: du2024vall
+[^22]: copet2024simple
+[^23]: yu2024megabyte
+[^24]: ding2021cogview
+[^25]: kondratyuk2023videopoet
+[^26]: zhao2023clap
+[^27]: zhang2023speak
+[^28]: wang2023viola
+[^29]: xin2024rall
+[^30]: he2019robust
+[^31]: sotelo2017char2wav
+[^32]: vasquez2019melnet
+[^33]: battenberg2020location
+[^34]: raffel2017online
+[^35]: tachibana2018efficiently
+[^36]: chiu2017monotonic
+[^37]: chen2020multispeech
+[^38]: tan2021survey
+[^39]: panayotov2015librispeech
+[^40]: mcauliffe2017montreal
+[^41]: siuzdak2023vocos
+[^42]: gulati2020conformer
+[^43]: chen2022wavlm
+[^44]: chen2022large
+[^45]: chen2022v2c
